--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
+    "@angular/animations": "^16.1.5",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
@@ -18,7 +19,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "ngx-notification-msg": "^0.2.2",
+    "@nebular/eva-icons": "^11.0.0",
+    "@nebular/theme": "^11.0.0",
+    "eva-icons": "^1.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
